tests/ui/fail/missing_table_and_operator.stderr
error: The keyword `WHERE` is reserved and cant be used as a table name

         = help: Any identifier is allowed in this location except for `WHERE`

 --> tests/ui/fail/missing_table_and_operator.rs:5:23
  |
5 |         SELECT * FROM WHERE  // Missing FROM clause
  |                       ^^^^^
